--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ osx_image: xcode8.1
 script:
  - xcodebuild -project RangeUISlider.xcodeproj -scheme RangeUISlider clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -destination 'platform=iOS Simulator,name=iPhone 7,OS=latest'
  - xcodebuild -project Demo.xcodeproj -scheme Demo-Debug    clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -destination 'platform=iOS Simulator,name=iPhone 7,OS=latest'
- - xcodebuild -project Demo.xcodeproj -scheme Demo-Release  clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+ - xcodebuild -project Demo.xcodeproj -scheme Demo-Release  clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -destination 'platform=iOS Simulator,name=iPhone 7,OS=latest'
