--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -18,4 +18,7 @@ jobs:
       - name: Build iOS Demo
         run: |
            set -o pipefail && xcodebuild -project Demo.xcodeproj -scheme Demo-Release  clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -destination 'platform=iOS Simulator,name=iPhone 8,OS=latest' | xcpretty
-
+      - name: Build SPM demo
+        run: |
+            cd DemoSPM
+            swift build
