--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -20,5 +20,4 @@ jobs:
            set -o pipefail && xcodebuild -project Demo.xcodeproj -scheme Demo-Release  clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -destination 'platform=iOS Simulator,name=iPhone 8,OS=latest' | xcpretty
       - name: Build SPM demo
         run: |
-            cd DemoSPM
-            swift build
+           set -o pipefail && xcodebuild -project DemoSPM.xcodeproj -scheme DemoSPM  clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -destination 'platform=iOS Simulator,name=iPhone 8,OS=latest' | xcpretty
