--- a/RangeUISlider.xcodeproj/xcshareddata/xcschemes/RangeUISliderDemo.xcscheme
+++ b/RangeUISlider.xcodeproj/xcshareddata/xcschemes/RangeUISliderDemo.xcscheme
@@ -26,7 +26,17 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "45E215231E8E812E00F0B8B9"
+            BuildableName = "RangeUISlider.framework"
+            BlueprintName = "RangeUISlider"
+            ReferencedContainer = "container:RangeUISlider.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
       </Testables>
    </TestAction>
