--- a/RangeUISlider.xcodeproj/xcshareddata/xcschemes/RangeUISlider.xcscheme
+++ b/RangeUISlider.xcodeproj/xcshareddata/xcschemes/RangeUISlider.xcscheme
@@ -44,7 +44,7 @@
       </TestPlans>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
